add basic middleware token
